<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context=".pagedl">

    <LinearLayout
        android:id="@+id/url_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_standard"
        android:background="@drawable/edit_text_background"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/url_icon_description"
            android:src="@drawable/ic_download"
            android:tint="@color/colorPrimary" />

        <EditText
            android:id="@+id/urlInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/url_hint"
            android:inputType="textUri"
            android:padding="@dimen/padding_small"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/toggle_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:background="@drawable/toggle_background"
        android:orientation="vertical"
        android:padding="@dimen/padding_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/url_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_small">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/js_toggle_description"
                android:src="@drawable/ic_js"
                android:tint="@color/colorPrimary" />

            <Switch
                android:id="@+id/jsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/js_toggle_label"
                android:textColor="@color/textColorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal"
            android:padding="@dimen/padding_small">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/resource_toggle_description"
                android:src="@drawable/ic_resources"
                android:tint="@color/colorPrimary" />

            <Switch
                android:id="@+id/resourceZipSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/resource_toggle_label"
                android:textColor="@color/textColorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal"
            android:padding="@dimen/padding_small">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/pc_ua_toggle_description"
                android:src="@drawable/ic_user_agent"
                android:tint="@color/colorPrimary" />

            <Switch
                android:id="@+id/pcUaSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/pc_ua_toggle_label"
                android:textColor="@color/textColorPrimary" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save_button_label"
        android:textColor="@color/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_container" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
